Add logos and other images

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<div>
-    <h3 style="border: 1px solid red;">Dashboard</h3>
+<div style="border: 1px solid red;">
+    <h3>Dashboard</h3>
     <hr>
     <h1>--WIDGETS GO HERE--</h1>
 </div>
