--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,17 +1,17 @@
 <div style="border: 1px solid green;">
-  <h5>--LOGO GOES HERE--</h5>
+  <img src="../../assets/dog blue logo.png" alt="" width="255" height="57" style="margin-bottom: 20px;">  <!--TODO See if height, width and margin can be moved to a css file-->    
   <form>
       <div class="form-group">
-          <input type="email" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Search">
+          <input type="text" class="form-control form-control-sm" aria-describedby="search" placeholder="Search">
       </div>
   </form>
   <br/>
-  <ul style="list-style: none">
-    <li>Overview</li>
-    <li>Sales Metrics</li>
-    <li>Customer Satisfaction</li>
-    <li>Supervisor Feedback</li>
-    <li>Badges</li>
-    <li>Admin Settings</li>
-  </ul>
+  <div> <!--TODO: Center Text in this div-->
+    <p>Overview</p> <!--TODO: On Hover, highlight text, on select, change background color -->
+    <p>Sales Metrics</p>
+    <p>Customer Satisfaction</p>
+    <p>Supervisor Feedback</p>
+    <p>Badges</p>
+    <p>Admin Settings</p>
+  </div>
 </div>
