--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
+
+
+
+* {
+    font-family: 'Open Sans', sans-serif;
+    /* font-weight: lighter; */
+}
