--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,6 @@
-<div class="container">
-    <div style="height: 60px;"></div>  <!-- TODO: Find a more elegant way to do this -->
-    <div class="row">
-        <div class="col-3">
-            <app-side-nav></app-side-nav>
-        </div>
-        <div class="col-9">
-            <app-dashboard></app-dashboard>
-        </div>
-    </div>
+<div class="wrapper">
+    <app-header></app-header>
+    <app-side-nav></app-side-nav>
+    <app-dashboard></app-dashboard>
 </div>
 
