--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,17 +1,28 @@
-<div style="border: 1px solid green;">
-  <img src="../../assets/dog blue logo.png" alt="" width="255" height="57" style="margin-bottom: 20px;">  <!--TODO See if height, width and margin can be moved to a css file-->    
+<!-- <div style="border: 1px solid green;">
+  <img class="companyLogo" src="../../assets/dog blue logo.png" alt="" width="255" height="57">   
   <form>
       <div class="form-group">
           <input type="text" class="form-control form-control-sm" aria-describedby="search" placeholder="Search">
       </div>
   </form>
   <br/>
-  <div> <!--TODO: Center Text in this div-->
-    <p>Overview</p> <!--TODO: On Hover, highlight text, on select, change background color -->
-    <p>Sales Metrics</p>
-    <p>Customer Satisfaction</p>
-    <p>Supervisor Feedback</p>
-    <p>Badges</p>
-    <p>Admin Settings</p>
+  <div class="menuOptions"> 
+    <small id="emailHelp" class="form-text text-muted">Dashboards</small>    
+    <p *ngFor="let dashboardOption of dashboardOptions">{{dashboardOption}}</p> 
+    <small id="emailHelp" class="form-text text-muted">More</small>
+    <p *ngFor="let userOption of userOptions">{{userOption}}</p>
   </div>
+</div> -->
+
+
+<!-- Bucky Interpretation below -->
+
+<div id="sidebar-wrapper" [ngClass]="{'sideBar': openSideNav}">
+  <ul class=sidebar-nav>
+    <li><a href="">Account</a></li>
+    <li><a href="">Settings</a></li>
+    <li><a href="">Logout</a></li>
+  </ul>
 </div>
+
+
