--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
+@import '~material-design-icons/iconfont/material-icons.css';
 
 
 
