--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div id="header-wrapper">
   <div id="hamburger-menu"><i (click)="toggleSideNav()" class="material-icons">menu</i></div>
+  <div id="log-out">My Account</div>
 </div>
-
