--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,15 +1,8 @@
-<!-- <div style="border: 1px solid red;">
-    <h3>Dashboard</h3>
-    <hr>
-    <h1>--WIDGETS GO HERE--</h1>
-</div> -->
-
-<!-- Bucky interpretation below -->
 <div id="page-content-wrapper" [ngClass]="{'sideBar': openSideNav}">
     <div class="container-fluid">
         <div class="rows">
             <div class="col-lg-12">
-                <a href="" class="btn btn-success" id="menu-toggle">Toggle Menu</a> <!--MOVE TO HEADER-->
+                <a href="" class="btn btn-success" id="menu-toggle">Toggle Menu</a>
                 <h1>Sidebar Layouts are cool</h1>
                 <p>I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
                     I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
