--- a/src/app/components/side-nav/side-nav.component.css
+++ b/src/app/components/side-nav/side-nav.component.css
@@ -1,18 +1,10 @@
-/* .companyLogo {
-    margin-bottom: 20px;
-}
-.menuOptions {
-    margin-left: 10px;
-} */
-
 #sidebar-wrapper {
     z-index: 1;
     position: absolute;
-    width: 0;
+    width: 56px;
     height: 100%;
     overflow-y: hidden;
     background: #2C3E50;
-    border: 2px solid red;
     opacity: 0.9;
 }
 
