--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,18 +2,16 @@
     <div class="container-fluid">
         <div class="rows">
             <div class="col-lg-12">
-                <a href="" class="btn btn-success" id="menu-toggle">Toggle Menu</a>
-                <h1>Sidebar Layouts are cool</h1>
-                <p>I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie I love apple pie 
-                    I love apple pie I love apple pie I love apple pie I love apple pie </p>
+                <h1>Lorem Ipsum</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ligula nisl, ultricies ac dignissim vel, varius ut purus. Donec quis erat fringilla, aliquam nunc id, elementum dolor. Nunc tellus neque, vulputate et congue eget, feugiat non augue. Suspendisse potenti. Vestibulum aliquet lorem a nunc ultricies, at maximus dolor hendrerit. Morbi vel iaculis ex, vitae tristique nulla. Fusce dapibus libero aliquet mattis ullamcorper. Sed tempor ante odio, vitae dapibus ipsum convallis at. Suspendisse laoreet rutrum sem eget ornare. Vivamus non vestibulum ex, sit amet euismod enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sollicitudin efficitur bibendum. Nulla ultricies convallis commodo. In non nisi est. Donec non iaculis purus, eu consectetur sem.
+                        
+                        Mauris feugiat vitae leo a varius. Curabitur vitae auctor tellus. Sed porta justo massa. Ut felis leo, tincidunt in turpis hendrerit, volutpat interdum ligula. Sed sagittis, ipsum a molestie iaculis, nisl sem imperdiet metus, sit amet vehicula augue purus eleifend felis. Etiam viverra, lorem ut mollis suscipit, orci lorem tristique neque, quis mattis eros tortor eu nisi. Nam imperdiet tincidunt molestie.
+                        
+                        Aenean dignissim porta ipsum. Pellentesque at accumsan nulla. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tempor mi posuere, vehicula ex sit amet, suscipit purus. Proin laoreet suscipit ipsum, sed condimentum lorem tristique ac. Quisque in dignissim diam. Integer velit turpis, cursus vel eleifend vitae, bibendum sit amet quam. Vestibulum sit amet molestie turpis. Curabitur varius ante vel facilisis semper. Proin mollis placerat varius. Mauris suscipit justo ac varius ullamcorper. Maecenas eu nisi augue. Vestibulum eu justo enim.
+                        
+                        Quisque condimentum tellus at libero pharetra laoreet. Nullam rhoncus risus auctor, malesuada sapien quis, varius nisl. Morbi ultrices sem in nunc tempus, vitae mattis nibh condimentum. Nam rhoncus purus nisi, ut sagittis magna pellentesque eget. Pellentesque iaculis, felis sed posuere venenatis, ipsum tortor euismod nunc, et varius ante ante ut leo. Sed mi erat, ornare blandit gravida in, lobortis eu lorem. Maecenas vestibulum ipsum ac magna porttitor tempus. Pellentesque auctor enim sed lorem tristique, nec accumsan dui faucibus. Cras et purus venenatis orci posuere commodo. Ut id euismod purus.
+                        
+                        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed posuere dolor at massa mollis molestie. Nulla quis neque at justo convallis hendrerit vitae et nibh. Integer elit erat, interdum sit amet elit quis, varius ultricies sem. Vestibulum id egestas elit. Vivamus tincidunt, nibh sed egestas accumsan, augue sem ullamcorper nulla, eu scelerisque ante dolor sed risus. Phasellus sed tristique magna. In urna massa, venenatis pretium risus bibendum, facilisis consequat enim. In euismod tempus lorem ornare molestie. Pellentesque porttitor lacus id pulvinar maximus. Donec pretium, nisl vitae bibendum sagittis, lacus mi semper dui, sed tristique dui ligula et libero. Curabitur lacinia scelerisque felis, sed tincidunt lectus suscipit a. Sed bibendum erat id dolor dapibus, ut luctus nulla pretium. Nullam tempor nisi orci, non scelerisque nibh finibus eget. Curabitur euismod eu est ut pulvinar.</p>
                 
             </div>
         </div>
