--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,11 +1,12 @@
 #page-content-wrapper {
     width: 100%;
-    height: 100%;
     position: absolute;
     padding: 56px;
-    background-color: #F4F4F4;
+    /* background-color: #F4F4F4; */
+    transition: padding 0.5s;
 }
 
 #page-content-wrapper.sideBar {
     padding-left: 250px;
+    transition: padding-left 0.5s;
 }
