--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div id="header-wrapper">
   <div id="hamburger-menu"><i (click)="toggleSideNav()" class="material-icons">menu</i></div>
-  <div><img src="" alt=""></div>
+  <a href="" id="company-logo"><img src="../../assets/First_Impression_302.png" alt=""></a>
   <div id="my-account">My Account</div>
 </div>
