--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -11,6 +11,7 @@
     line-height: 46px;
     text-align: center;
     border-right: 1px solid #F1F1F1;
+    cursor: pointer;
 }
 
 #hamburger-menu:hover {
@@ -19,7 +20,6 @@
 }
 
 #hamburger-menu i {
-    cursor: pointer;
     line-height: 46px;
     user-select: none;
 }
@@ -27,23 +27,35 @@
 #company-logo img {
     padding: 0 10px;
     width: 150px;
-    height: 45px;
-    border-right: 1px solid #F1F1F1;
+    height: 45px; 
+    user-select: none;   
 }
 
-#my-account {
+#company-logo {
+    border-right: 1px solid #F1F1F1; 
+}
+
+.company-logo-resize {
+    width: 194px;
+}
+
+#messages {
     line-height: 46px;
-    cursor: pointer;
-    float: right;
     border-right: 1px solid #F1F1F1;
     border-left: 1px solid #F1F1F1;
     padding: 0 15px;
     margin-left: auto;
+    margin-right: 15px;
     color: #333333;
     font-size: 14px;
+    user-select: none;
 }
 
-#my-account:hover {
+#messages i {
+    line-height: 46px;
+}
+
+#messages:hover {
     background-color: #F8F8F8;
     transition: background-color 0.2s;
 }
