--- a/src/app/components/side-nav/side-nav.component.css
+++ b/src/app/components/side-nav/side-nav.component.css
@@ -11,28 +11,51 @@
 .sidebar-nav {
     padding: 0;
     list-style: none;
+    margin: 0;
+    cursor: pointer;
+    border-left: 3px solid transparent;    
 }
 
-.sidebar-nav li {
-    text-indent: 20px;
+.sidebar-nav {
+    text-indent: 8px;
     line-height: 40px;
+    white-space: nowrap;
+    cursor: pointer;   
+    user-select: none; 
+    text-decoration: none;
 }
 
-.sidebar-nav li a {
-    display: block;
+.sidebar-nav span {
+    display: inline;
     text-decoration: none;
     color: #808b9c;
     font-size: 14px;
-    transition: color 0.5s;
-    border-left: 3px solid transparent;
+    transition: color 0.25s;
 }
 
-.sidebar-nav li a:hover {
-    color: #FFFFFF;
+.sidebar-nav:hover {
     border-left: 3px solid #00B6EE;
+}
+
+.sidebar-nav:hover #side-nav-menu-item {
+    color: #FFFFFF;
 }
 
 #sidebar-wrapper.sideBar {
     width: 250px;
-    transition: width 0.5s;
+    transition: width 0.25s;
 }
+
+#icon {
+     color: #808b9c;
+     font-size: 16px;
+     vertical-align: middle;
+     padding-bottom: 2px;
+     margin-right: 10px;
+     transition: color 0.25s;  
+    }
+
+.sidebar-nav:hover #icon {
+    color: #FFFFFF;
+}
+
