--- a/src/app/components/side-nav/side-nav.component.css
+++ b/src/app/components/side-nav/side-nav.component.css
@@ -2,7 +2,7 @@
     z-index: 1;
     position: absolute;
     width: 56px;
-    height: 100%;
+    height: 100vh;
     overflow-y: hidden;
     background: #23272D;
     transition: width 0.5s;
