test endpoint and make sidebar and header fixed

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,6 +4,9 @@
     flex-direction: row;
     border-bottom: 1px solid #DDDDDD;
     background-color: #FFFFFF;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
 }
 
 #hamburger-menu {
