--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,3 +1,41 @@
-<p>
-  sign-in works!
-</p>
+<div class="container-fluid">
+  <div class="rows">
+    <div class="col-lg-12">
+      <div class="sign-in-wrapper">
+        <img class="companyLogo" src="../../assets/dog blue logo.png" alt="">
+        <div class="card">
+          <div class="card-body">
+
+            <form #loginForm="ngForm" (ngSubmit)="login(loginForm.value)">
+              <div class="form-group">
+                <input 
+                type="email" 
+                class="form-control" 
+                id="username" 
+                placeholder="Enter Username"
+                ngModel
+                name="username"
+                #username="ngModel"
+                required
+                >
+              </div>
+                        
+              <div class="form-group">
+                <input 
+                type="password" 
+                class="form-control" 
+                id="password" 
+                placeholder="Password" 
+                ngModel 
+                name="password" 
+                #password="ngModel">
+              </div>
+          
+              <button type="submit" class="btn" >Login</button>
+              </form>  
+            </div>
+          </div>
+      </div>  
+    </div>
+  </div>
+</div>
