--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,12 +6,7 @@
                     <i id="icon" class="material-icons md-light">dashboard</i>
                     <h3>Dashboard</h3>
                 </div>
-                <ul class="list-group">
-                    <li 
-                    *ngFor="let post of posts"
-                    class="list-group-item">{{post.title}}</li>
-                </ul>
-                <!-- <app-charts></app-charts> -->
+                <app-charts></app-charts>
             </div>
         </div>
     </div>
