set up reusable data service

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,9 @@
-<div class="wrapper">
+<!-- <div class="wrapper">
     <app-header></app-header>
     <app-side-nav></app-side-nav>
-    <app-dashboard></app-dashboard>
-</div>
+    <app-dashboard>
+        
+    </app-dashboard>
+</div> -->
 
+<app-sign-in></app-sign-in>
