--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,10 +3,11 @@
         <div class="rows">
             <div class="col-lg-12">
                 <div class="page-header">
+                    <!--Put dashboard title in each component with dynamic value and rename this component-->
                     <i id="icon" class="material-icons md-light">dashboard</i>
                     <h3>Dashboard</h3>
                 </div>
-                <app-charts></app-charts>
+                <ng-content></ng-content>
             </div>
         </div>
     </div>
