Add basic routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+
+<div class="wrapper">
+    <app-header></app-header>
+    <app-side-nav></app-side-nav>
+    <app-home></app-home>
+</div>
