--- a/src/app/components/my-team/my-team.component.html
+++ b/src/app/components/my-team/my-team.component.html
@@ -1,6 +1,7 @@
 <div class="page-header">
     <!--Put dashboard title in each component with dynamic value and rename this component-->
-    <i id="icon" class="material-icons md-light">dashboard</i>
-    <h3>Dashboard</h3>
-</div>
-<ng-content></ng-content>
+    <i id="icon" class="material-icons md-light">people</i>
+    <h3>My Team</h3>
+  </div>
+  <ng-content></ng-content>
+  
