--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,6 +2,11 @@
   <div (click)="toggleSideNav()" id="hamburger-menu"><i class="material-icons">menu</i></div>
   <a href="" id="company-logo" [ngClass]="{'company-logo-resize': sideNavOpen}"><img src="../../assets/First_Impression_302.png" alt=""></a>
   <a href="" placement="bottom" ngbTooltip="Messages" class="messages"><i class="material-icons">email</i></a>  
-  <a href="" placement="bottom" ngbTooltip="Profile" class="profile"><i class="material-icons">perm_identity</i></a>
+  <a routerLink="/myProfile" placement="bottom" ngbTooltip="Profile" class="profile"><i class="material-icons">perm_identity</i></a>
   <a href="" placement="bottom" ngbTooltip="Logout"class="logout"><i class="material-icons">power_settings_new</i></a>
 </div>
+
+
+<!--TODO: Make sure that when profile or message button is selected, that the button is highlighted, 
+  and the corresponding side-nav gets highlighted (ex. I click on the 'My Profile' tab in the header, 
+  the sidenav should automatically highlight the 'My Profile' selection)
