--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,10 @@
-<!-- <div class="wrapper">
-    <app-header></app-header>
-    <app-side-nav></app-side-nav>
-    <app-dashboard>
-        
-    </app-dashboard>
-</div> -->
+<div id="page-content-wrapper" [ngClass]="{'sideBar': openSideNav}">
+    <div class="container-fluid">
+        <div class="rows">
+            <div class="col-lg-12">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+</div>
 
-<app-sign-in></app-sign-in>
