--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,10 +1,6 @@
-<div class="card">
-  <div class="card-header">
-    Featured
-  </div>
-  <div class="card-block">
-    <h4 class="card-title">Special title treatment</h4>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
+<div class="page-header">
+  <!--Put dashboard title in each component with dynamic value and rename this component-->
+  <i id="icon" class="material-icons md-light">person</i>
+  <h3>User Profile</h3>
 </div>
+<ng-content></ng-content>
