--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,4 +9,4 @@
 
 <!--TODO: Make sure that when profile or message button is selected, that the button is highlighted, 
   and the corresponding side-nav gets highlighted (ex. I click on the 'My Profile' tab in the header, 
-  the sidenav should automatically highlight the 'My Profile' selection)
+  the sidenav should automatically highlight the 'My Profile' selection)-->
