Clean up some todo notes

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,5 @@
 <div class="page-header">
-    <!--Put dashboard title in each component with dynamic value and rename this component-->
     <i id="icon" class="material-icons md-light">dashboard</i>
     <h3>Dashboard</h3>
 </div>
-<ng-content></ng-content>
+<app-charts></app-charts>
