Configure table for Manage Users

--- a/src/app/components/manage-users/manage-users.component.html
+++ b/src/app/components/manage-users/manage-users.component.html
@@ -2,4 +2,7 @@
     <i id="icon" class="material-icons md-light">people</i>
     <h3>Manage Users</h3>
   </div>
+
+  <app-tables></app-tables>
+  
   
