--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,9 @@
 
 @import '~material-design-icons/iconfont/material-icons.css';
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
 * {
     font-family: 'Roboto', sans-serif;
     outline: none;
