--- a/src/app/components/manage-users/manage-users.component.html
+++ b/src/app/components/manage-users/manage-users.component.html
@@ -3,6 +3,6 @@
     <h3>Manage Users</h3>
   </div>
 
-  <app-tables></app-tables>
+  <app-tables [users]="users" [headerButtons]="headerButtons" [actionButtons]="actionButtons"></app-tables>
   
   
