--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,5 +1,5 @@
 <div id="sidebar-wrapper" [ngClass]="{'sideBar': openSideNav}">
-  <div routerLink="{{item.route}}" id=sidebar-nav *ngFor="let item of dashboardOptions; let i = index" (click)="setClickedRow(i)" [ngClass]="{'selected-row': selectedRow == i}">
+  <div routerLink="{{item.route}}" id=sidebar-nav *ngFor="let item of dashboardOptions; let i = index" routerLinkActive="selected-row">
       <i id="icon" class="material-icons md-light">{{item.icon}}</i>
       <span id="side-nav-menu-item" [hidden]="!openSideNav">{{item.name}}</span>
   </div>
