design my profile section

--- a/src/app/components/my-team/my-team.component.html
+++ b/src/app/components/my-team/my-team.component.html
@@ -3,3 +3,4 @@
     <h3>My Team</h3>
   </div>
   
+  <app-tables [actionButtons]="actionButtons" [headerButtons]="headerButtons" [users]="users"></app-tables>
