--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,4 +1,75 @@
 <div class="page-header">
   <i id="icon" class="material-icons md-light">person</i>
-  <h3>User Profile</h3>
+  <h3>My Profile</h3>
 </div>
+
+<img src="../../../assets/profile-placeholder.png" class="img-fluid profile-picture" alt="profile-picture">
+
+<p-fileUpload 
+  chooseLabel="Change Photo" 
+  mode="basic" 
+  name="demo[]" 
+  url="./upload.php" 
+  accept="image/*" 
+  maxFileSize="1000000" 
+  (onUpload)="onBasicUpload($event)" 
+  auto="true">
+</p-fileUpload>
+
+<form>
+  <div class="form-group">
+    <label for="agentId">ID</label>
+    <input type="text" class="form-control form-control-sm" id="agentId" [disabled]="true">
+  </div>
+  
+  <div class="form-group">
+    <label for="username">Username</label>
+      <input type="text" class="form-control form-control-sm" id="username">
+  </div>
+
+  <div class="form-check">
+    <label class="form-check-label">
+      <input class="form-check-input" type="checkbox" value="" name="passwordChange" [(ngModel)]="passwordChange" (click)="onChangePassword()">
+      Change Password
+    </label>
+  </div><br>
+
+  <div class="form-group" *ngIf="passwordChange">
+    <label for="newPassword">New Password</label>
+      <input type="password" class="form-control form-control-sm" id="newPassword">
+      <small id="emailHelp" class="form-text text-muted">New password must be at least 8 characters</small>            
+  </div>
+
+  <div class="form-group" *ngIf="passwordChange">
+    <label for="confirmPassword">Confirm Password</label>
+      <input type="password" class="form-control form-control-sm" id="confirmPassword">
+      <small id="emailHelp" class="form-text text-muted">New password must be at least 8 characters</small>            
+  </div>
+
+  <div class="form-group">
+    <label for="firstName">First Name</label>
+      <input type="text" class="form-control form-control-sm" id="firstName">
+  </div>
+
+  <div class="form-group">
+    <label for="lastName">Last Name</label>
+      <input type="text" class="form-control form-control-sm" id="lastName">
+  </div>
+
+  <div class="form-group">
+    <label for="emailAddress">Email Address</label>
+      <input type="email" class="form-control form-control-sm" id="emailAddress">
+  </div>
+
+  <div class="form-group">
+    <label for="supervisor">Supervisor</label>
+      <input type="supervisor" class="form-control form-control-sm" id="supervisor" [disabled]="true">
+  </div>
+
+  <div class="form-group">
+      <label for="role">Role</label>
+          <p-chips name="role" [(ngModel)]="role" [disabled]="true"></p-chips>          
+    </div><br>
+
+    <button type="submit" class="btn btn-primary">Save Changes</button>
+  </form>
