--- a/src/app/components/messages/messages.component.html
+++ b/src/app/components/messages/messages.component.html
@@ -1,3 +1,7 @@
 <p>
   messages works!
 </p>
+
+<p>TODO:  Add a messaging app here to communicate with supervisor 
+  (possibly a real-time chat application) as well as show notifications 
+  when a new evaluation or review is available</p>
