--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,5 +1,2 @@
-<div class="page-header">
-    <i id="icon" class="material-icons md-light">account_balance</i>
-    <h3>Account Management</h3>
-  </div>
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
   
