--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,2 @@
-<div class="page-header">
-    <i id="icon" class="material-icons md-light">dashboard</i>
-    <h3>Dashboard</h3>
-</div>
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
 <app-charts></app-charts>
