--- a/src/app/components/global-settings/global-settings.component.html
+++ b/src/app/components/global-settings/global-settings.component.html
@@ -1,5 +1,1 @@
-<div class="page-header">
-    <i id="icon" class="material-icons md-light">settings</i>
-    <h3>Global Settings</h3>
-  </div>
-  
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
