--- a/src/app/components/manage-users/manage-users.component.html
+++ b/src/app/components/manage-users/manage-users.component.html
@@ -1,8 +1,4 @@
-<div class="page-header">
-    <i id="icon" class="material-icons md-light">people</i>
-    <h3>Manage Users</h3>
-  </div>
-
-  <app-tables [users]="users" [headerButtons]="headerButtons" [actionButtons]="actionButtons"></app-tables>
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
+<app-tables [users]="users" [headerButtons]="headerButtons" [actionButtons]="actionButtons"></app-tables>
   
   
