--- a/src/app/components/my-team/my-team.component.html
+++ b/src/app/components/my-team/my-team.component.html
@@ -1,6 +1,2 @@
-<div class="page-header">
-    <i id="icon" class="material-icons md-light">people</i>
-    <h3>My Team</h3>
-  </div>
-  
-  <app-tables [actionButtons]="actionButtons" [headerButtons]="headerButtons" [users]="users"></app-tables>
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
+<app-tables [actionButtons]="actionButtons" [headerButtons]="headerButtons" [users]="users"></app-tables>
