--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -1,5 +1,1 @@
-<div class="page-header">
-    <i id="icon" class="material-icons md-light">assignment</i>
-    <h3>Reports</h3>
-  </div>
-  
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
