--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,7 +1,4 @@
-<div class="page-header">
-  <i id="icon" class="material-icons md-light">person</i>
-  <h3>My Profile</h3>
-</div>
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
 
 <img src="../../../assets/profile-placeholder.png" class="img-fluid profile-picture" alt="profile-picture">
 
