--- a/src/app/components/customer-satisfaction/customer-satisfaction.component.html
+++ b/src/app/components/customer-satisfaction/customer-satisfaction.component.html
@@ -1,5 +1,1 @@
-<div class="page-header">
-    <i id="icon" class="material-icons md-light">sentiment_very_satisfied</i>
-    <h3>Customer Satisfaction</h3>
-  </div>
-  
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
