--- a/src/app/components/supervisor-evaluations/supervisor-evaluations.component.html
+++ b/src/app/components/supervisor-evaluations/supervisor-evaluations.component.html
@@ -1,5 +1,1 @@
-<div class="page-header">
-    <i id="icon" class="material-icons md-light">domain</i>
-    <h3>Supervisor Evaluations</h3>
-  </div>
-  
+<app-page-header [pageInfo]="pageInfo"></app-page-header>
