--- a/src/app/components/tables/tables.component.html
+++ b/src/app/components/tables/tables.component.html
@@ -1,6 +1,11 @@
-<p-dataTable 
+<div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
+    <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+    <input #gb type="text" pInputText placeholder="Filter Results" class="tableFilter">        
+</div>
+
+<p-dataTable
+  [globalFilter]="gb"
   [value]="users"
-  
   [(selection)]="selectedUsers" 
   [rows]="10"
   [stacked]=autoResizeTable
@@ -9,12 +14,14 @@
   [headerCheckboxToggleAllPages]="true" 
   [rowsPerPageOptions]="[10,25,50,100]">
     <p-header>
-      <button *ngFor="let button of headerButtons">{{button.title}}</button>
+        <div class="ui-helper-clearfix">
+            <button type="button" pButton icon="fa-plus" iconPos="left" style="float:right" label="{{button.title}}" *ngFor="let button of headerButtons"></button>        
+        </div>
     </p-header>
     <p-column [style]="{'width':'38px'}" selectionMode="multiple"></p-column>
-    <p-column field="username" header="Username" [sortable]="true" [filter]="true"></p-column>    
-    <p-column field="firstName" header="First Name" [sortable]="true" [filter]="true"></p-column>
-    <p-column field="lastName" header="Last Name" [sortable]="true" [filter]="true"></p-column>
+    <p-column [style]="{'font-size': '12px'}" field="username" header="Username" [sortable]="true"></p-column>    
+    <p-column [style]="{'font-size': '12px'}" field="firstName" header="First Name" [sortable]="true"></p-column>
+    <p-column [style]="{'font-size': '12px'}" field="lastName" header="Last Name" [sortable]="true"></p-column>
     <p-column [style]="{'width':'120px'}">    
       <ng-template pTemplate="header">
         <p>Actions</p>
