Add qualitative cards for dashboard

--- a/src/app/components/tables/tables.component.css
+++ b/src/app/components/tables/tables.component.css
@@ -16,6 +16,9 @@
 
 .actionButton i {
     font-size: 13px;
+    vertical-align: middle;
+    display: inline-block;
+    padding-bottom: 2px;
 }
 
 .tableFilter {
