--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -1,34 +1,58 @@
 <div class="container-fluid">
     <div class="row">
+        <div class="col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Liked</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">What the customer liked</h6>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi libero sapien, volutpat eu augue ultrices.</p>
+                    <a href="#" class="card-link">More</a>
+                </div>
+            </div><br>
+        </div>
+        <div class="col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Disliked</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">What the customer disliked</h6>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce interdum purus vitae odio mattis, et iaculis nisi.</p>
+                    <a href="#" class="card-link">More</a>
+                </div>
+            </div><br>       
+        </div>
+        <div class="col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Product Description</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">Understanding of the product</h6>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac suscipit dui. Praesent eu maximus eros, eu bibendum.</p>
+                    <a href="#" class="card-link">More</a>
+                </div>
+            </div><br>
+        </div>     
+    </div>
+    <div class="row">
         <div class="col-lg-6">
-            <p-panel header="Likelihood to Recommend" >
-                <p-header>
-                </p-header>
-                <p-chart type="line" [data]="recommend" (onDataSelect)="selectData($event)"></p-chart>        
-            </p-panel>
+            <div class="card">
+                <p-chart type="line" [data]="recommend" (onDataSelect)="selectData($event)"></p-chart> 
+            </div><br>      
         </div>
         <div class="col-lg-6"> 
-            <p-panel header="Politeness" >
-                <p-header>
-                </p-header>
+            <div class="card">
                 <p-chart type="line" [data]="politeness" (onDataSelect)="selectData($event)"></p-chart>        
-            </p-panel>
+            </div><br>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-6"> 
-            <p-panel header="Helpfulness" >
-                <p-header>
-                </p-header>
+            <div class="card">
                 <p-chart type="line" [data]="helpfulness" (onDataSelect)="selectData($event)"></p-chart>        
-            </p-panel>
+            </div><br>
         </div>
         <div class="col-lg-6"> 
-            <p-panel header="Trustworthiness" >
-                <p-header>
-                </p-header>
+            <div class="card">
                 <p-chart type="line" [data]="trustworthiness" (onDataSelect)="selectData($event)"></p-chart>        
-            </p-panel>
+            </div><br>
         </div>
     </div>
 </div>
