--- a/src/app/components/my-team/my-team.component.html
+++ b/src/app/components/my-team/my-team.component.html
@@ -1,2 +1,2 @@
 <app-page-header [pageInfo]="pageInfo"></app-page-header>
-<app-tables [actionButtons]="actionButtons" [headerButtons]="headerButtons" [users]="users"></app-tables>
+<app-tables [actionButtons]="actionButtons" [users]="users"></app-tables>
