--- a/src/styles.css
+++ b/src/styles.css
@@ -45,4 +45,12 @@ body {
 .btn:focus, .btn:active:focus, .btn.active:focus {
     outline: 0 none !important;
 }
-    
+
+/* Star Rating Color Customization */
+.star-icon {
+    font-size: 20px !important;
+}
+.star-icon:before {
+    color: #FEC42E !important;
+    top: -3px !important;
+}
