--- a/src/app/components/customer-satisfaction/customer-satisfaction.component.html
+++ b/src/app/components/customer-satisfaction/customer-satisfaction.component.html
@@ -1,3 +1,3 @@
 <app-page-header [pageInfo]="pageInfo"></app-page-header>
 <app-star-rating></app-star-rating>
-<app-review-card></app-review-card>
+<app-review-card [reviews]="reviews"></app-review-card>
