--- a/src/app/components/review-card/review-card.component.html
+++ b/src/app/components/review-card/review-card.component.html
@@ -1,32 +1,32 @@
 <!-- TODO: Add a 'sort-by' button, where the agent can sort by 'Highest Rated, Lowest Rated, and Recently Added'. -->
 <div class="container-fluid">
   <div class="row">
-    <div class="card text-center">
+    <div class="card text-center" style="width: 475px; margin: 10px;" *ngFor="let review of reviews">
       <div class="card-header">
         Featured
       </div>
       <div class="card-body">
-        <p class="card-text">
-            <p-tabView>
-                <p-tabPanel header="Rating" leftIcon="fa fa-star-o">
-                  <p>TODO: Add star ratings here</p>
-                </p-tabPanel>
-                <p-tabPanel header="Liked" leftIcon="fa fa-thumbs-o-up">
-                    The story begins as Don Vito Corleone, the head of a New York Mafia family, overseeshis daughter's wedding. His beloved son ichael has just come home from the war, but does not intend to become part of his father's business. T hrough Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family.
-                </p-tabPanel>
-                <p-tabPanel header="Disliked" leftIcon="fa fa-thumbs-o-down">
-                    Francis Ford Coppola's legendary continuation and sequel to his landmark 1972 film, The_Godfather parallels the young Vito Corleone's rise with his son Michael's spiritual fall, deepening The_Godfather's depiction of the dark side of the American dream. In the early 1900s, the child Vito flees his Sicilian village for America after the local Mafia kills his family. Vito struggles to make a living, legally or illegally, for his wife and growing brood in Little Italy, killing the local Black Hand Fanucci after he demands his customary cut of the tyro's business. With Fanucci gone, Vito's communal stature grows.
-                </p-tabPanel>
-                <p-tabPanel header="Product Desc." leftIcon="fa fa-file-text-o">
-                    After a break of more than  15 years, director Francis Ford Coppola and writer Mario Puzo returned to the well for this third and final story of the fictional Corleone crime family. Two decades have passed, and crime kingpin Michael Corleone, now divorced from his wife Kay has nearly succeeded in keeping his promise that his family would one day be completely legitimate.
-                </p-tabPanel>
-            </p-tabView>
-        </p>
-      </div>
-      <div class="card-footer text-muted">
+          <mat-tab-group>
+              <mat-tab label="Rating">
+                <p>Recommend: {{review.rating.recommendRating}}</p>
+                <p>Politeness: {{review.rating.politenessRating}}</p>
+                <p>Helpfulness: {{review.rating.helpfulnessRating}}</p>
+                <p>Trustworthy: {{review.rating.trustworthyRating}}</p>
+              </mat-tab>
+              <mat-tab label="Liked">
+                <p>{{review.liked}}</p>
+              </mat-tab>
+              <mat-tab label="Disliked">
+                  <p>{{review.disliked}}</p>
+                </mat-tab>
+                <mat-tab label="Product Desc.">
+                    <p>{{review.productDesc}}</p>
+                  </mat-tab>
+            </mat-tab-group>
+    </div>
+    <div class="card-footer text-muted">
         October 3, 2017
       </div>
-    </div>
   </div>
   
 
