--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,10 @@ body {
     color: #FEC42E !important;
     top: -3px !important;
 }
+
+/* Review Tabs Size Customization */
+.mat-tab-label, .mat-tab-label-active{
+    min-width: 0!important;
+    padding: 0 25px!important;
+    margin: 0px!important;
+   }
