Change layout of review card

--- a/src/app/components/customer-satisfaction/customer-satisfaction.component.html
+++ b/src/app/components/customer-satisfaction/customer-satisfaction.component.html
@@ -1,3 +1,14 @@
 <app-page-header [pageInfo]="pageInfo"></app-page-header>
-<app-star-rating></app-star-rating>
+  <div class="container-fluid rating-wrapper">
+    <div class="row">
+      <div class="col-lg-12">
+        <h4>Overall Rating</h4>
+      </div>
+      <div class="col-lg-12">
+          <h1>{{reviewTotals.overallRating}}</h1>
+          <rating [(ngModel)]="reviewTotals.overallRating" [max]="5" [readonly]="true"></rating>
+        <span>({{reviewTotals.reviewsCount}} Reviews)</span>                
+      </div>
+    </div>
+  </div>
 <app-review-card [reviews]="reviews"></app-review-card>
